[gd_scene load_steps=7 format=3 uid="uid://bhpkdcqtqnwcu"]

[ext_resource type="Script" uid="uid://cfyqpqv5vwjpv" path="res://ui/individual_building_display.gd" id="1_mulvi"]
[ext_resource type="Texture2D" uid="uid://btqupb2nvf000" path="res://textures/ui/pop.png" id="2_ufo8j"]
[ext_resource type="Script" uid="uid://bsqomyqq8o3i1" path="res://misc/localizer.gd" id="3_wk17k"]
[ext_resource type="Script" uid="uid://cl2yut0pnkpl" path="res://misc/localizer_target.gd" id="4_q0la6"]

[sub_resource type="Resource" id="Resource_8tlq0"]
script = ExtResource("4_q0la6")
node = NodePath("../VBoxContainer/ConsumeVbox/Label")
var_id = &"text"
loc_id = "individual_building_display.consumption"
metadata/_custom_type_script = "uid://cl2yut0pnkpl"

[sub_resource type="Resource" id="Resource_q0la6"]
script = ExtResource("4_q0la6")
node = NodePath("../VBoxContainer/ProduceVbox/Label")
var_id = &"text"
loc_id = "individual_building_display.production"
metadata/_custom_type_script = "uid://cl2yut0pnkpl"

[node name="IndividualBuildingDisplay" type="PanelContainer"]
script = ExtResource("1_mulvi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="SizeLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_ufo8j")

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.0
show_percentage = false

[node name="BuildingCapacityLabel" type="Label" parent="VBoxContainer/HBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConsumeVbox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ConsumeVbox"]
layout_mode = 2
text = "Consumption"

[node name="ProduceVbox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ProduceVbox"]
layout_mode = 2
text = "Consumption"

[node name="Localizer" type="Node" parent="."]
script = ExtResource("3_wk17k")
to_localize = Array[ExtResource("4_q0la6")]([SubResource("Resource_8tlq0"), SubResource("Resource_q0la6")])
metadata/_custom_type_script = "uid://bsqomyqq8o3i1"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PopButton" to="." method="_on_pop_button_pressed"]
